--- a/assets/main.css
+++ b/assets/main.css
@@ -60,7 +60,7 @@ tr>td {
 }
 
 .zendesk-main__conte {
-  background-image: url(image/background_flat.png);
+  background-image: url(images/background_flat.png);
   color: #ffffff;
   height: 250px;
 }
