--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -129,3 +129,145 @@ input:checked + .slider:before{-webkit-transform: translate(21px,50%); -ms-trans
    opacity: 0.2;
    color: #20034e;
  }
+ .search-container {
+  background-color: rgba(144, 164, 225, 0.2);
+}
+
+.search-container .search-block {
+  background-color: #ecfaff;
+  background-color: var(--ice-blue);
+  padding: 6px 0 6px;
+  margin: 8px auto;
+  max-width: 280px;
+}
+
+.search-container .search-block .return-icon {
+  display: inline-block;
+  vertical-align: middle;
+  text-align: center;
+  width: 36px;
+  height: 36px;
+  border-radius: 18px;
+}
+
+.search-container .search-block .return-icon i {
+  background-image: linear-gradient(154deg, #2000c8, #7811b2);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  cursor: pointer;
+  font-size: 18px;
+  height: 36px;
+  width: 36px;
+  display: inline-block;
+  line-height: 36px;
+}
+.search-container .search-block .return-icon:hover {
+  background-image: linear-gradient(156deg, #2000c8, #7811b2);
+}
+.search-container .search-block .return-icon:hover i {
+  background-image: linear-gradient(154deg, #fff, #fff);
+}
+
+.search-container .search-block .search-box {
+  box-sizing: border-box;
+  position: relative;
+  display: inline-block;
+  width: calc(100% - 40px);
+  vertical-align: middle;
+}
+
+.search-container .search-block.hide-return .search-box{
+  width: 100%;
+}
+
+.search-container .search-block.hide-return .return-icon{
+  display: none;
+}
+
+.search-container .search-block .search-box .search-icon {
+  position: absolute;
+  top: 6px;
+  left: 8px;
+  z-index: 2;
+  width: 24px;
+  height: 24px;
+  text-align: center;
+}
+.search-container .search-block .search-box .search-icon i{
+  width: 24px;
+  height: 24px;
+  line-height: 24px;
+  font-size: 17px;
+  background-image: linear-gradient(157deg, #2000c8, #7811b2);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.search-container .search-block .search-box input {
+  border-radius: 16px;
+  background-color: #ffffff;
+  border: solid 1px rgba(4, 53, 206, 0.2);
+  padding: 8px 30px 8px 40px;
+  width: 100%;
+  box-sizing: border-box;
+  line-height: 1.5;
+  letter-spacing: 0.1px;
+  font-family: Mariupol, sans-serif;
+  font-size: 12px;
+  color: #20034e;
+}
+
+.search-container .search-block .search-box .close-icon {
+  position: absolute;
+  top: 6px;
+  right: 10px;
+  z-index: 2;
+  width: 24px;
+  height: 24px;
+  border-radius: 12px;
+  text-align: center;
+  cursor: pointer;
+  display: none;
+}
+.search-container .search-block .search-box .close-icon i{
+  width: 24px;
+  height: 24px;
+  line-height: 24px;
+  font-size: 17px;
+  background-color: rgba(4, 53, 206, 0.2);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.search-container .search-block .search-box .close-icon.show{
+  display: block;
+}
+.search-container .search-block .search-box .close-icon.active{
+  display: block;
+  background-color: rgba(4, 53, 206, 0.2);
+}
+.search-container .search-block .search-box .close-icon.active i{
+  background-color: #fff;
+}
+
+.search-container .search-block .search-box input:hover{
+  outline: 0;
+  border: solid 1px #ca3fe6;
+}
+.search-container .search-block .search-box input:focus{
+  outline: 0;
+  box-shadow: 0 6px 8px 0 rgba(101, 13, 183, 0.26);
+}
+.search-container .search-block .search-box input:active {
+  outline: 0;
+  box-shadow: 0 6px 8px 0 rgba(101, 13, 183, 0.26);
+}
+
+.search-container .search-block .search-box input::placeholder{
+  opacity: 0.4;
+  line-height: 1.5;
+  letter-spacing: 0.1px;
+  color: #20034e;
+  color: var(--night-blue);
+  font-family: Mariupol, sans-serif;
+  font-size: 12px;
+}
